[12.]#6 --'Fixing the desgin issue and making work the messages and conactact section properly on mobile view. '

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1,10 +1,10 @@
 @media (min-width: 1400px) and (max-width: 1600px) {
     .wsus__user_list_area_height {
-        max-height: 400px;
+        /* max-height: 400px; */
     }
 
     .wsus__chat_area_body {
-        height: 675px;
+        /* height: 675px; */
     }
 
     .wsus__chat_area {
@@ -57,7 +57,7 @@
     }
 
     .wsus__user_list_area_height {
-        max-height: 400px;
+        /* max-height: 400px; */
     }
 
     .wsus__single_chat .venobox img {
@@ -66,7 +66,7 @@
     }
 
     .wsus__chat_area_body {
-        height: 670px;
+        /* height: 670px; */
     }
 
     .wsus__chat_info_gallery li {
@@ -103,11 +103,11 @@
     }
 
     .wsus__user_list_area_height {
-        max-height: 350px;
+        /* max-height: 350px; */
     }
 
     .wsus__chat_area_body {
-        height: 620px;
+        /* height: 620px; */
     }
 
     .wsus__chat_info_gallery li {
@@ -153,7 +153,7 @@
     }
 
     .wsus__chat_area_body {
-        height: 620px;
+        /* height: 620px; */
     }
 
     .wsus__single_chat .venobox img {
@@ -166,7 +166,7 @@
     }
 
     .wsus__user_list_area_height {
-        max-height: 350px;
+        /* max-height: 350px; */
     }
 
     .show_small_info .wsus__chat_area {
@@ -207,7 +207,7 @@
     }
 
     .wsus__user_list_area_height {
-        max-height: 370px;
+        /* max-height: 370px; */
     }
 
     .wsus__chat_area {
@@ -228,7 +228,7 @@
     }
 
     .wsus__chat_area_body {
-        height: 660px;
+        /* height: 660px; */
     }
 
     .wsus__chat_area_footer {
@@ -285,7 +285,7 @@
     }
 
     .wsus__user_list_area_height {
-        max-height: 370px;
+        /* max-height: 370px; */
     }
 
     .wsus__chat_area {
@@ -326,7 +326,7 @@
     }
 
     .wsus__chat_area_body {
-        height: 670px;
+        /* height: 670px; */
     }
 
     .emojionearea .emojionearea-picker.emojionearea-picker-position-top {
